--- a/src/app/components/sales/all-orders/all-orders.component.html
+++ b/src/app/components/sales/all-orders/all-orders.component.html
@@ -7,7 +7,7 @@
                     <div class="custom-datatable">
                         <input type='text' class="filter-ngx form-control" placeholder='Search...'
                             (keyup)='updateFilter($event)' />
-                            <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
+                            <button *appUserRole="['superAdmin', 'admin','sales' ]" class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
                         
                         <!-- <select name="ordersFilter" (change)="filterOrders($event.target.value)">                            
                             <option>New orders</option>
@@ -78,10 +78,10 @@
                                 </span>
                               </div>
                               <div class="flex">
-                                <button type="button" pButton pRipple icon="pi pi-file" (click)="dt1.exportCSV()" class="mr-2" pTooltip="CSV" tooltipPosition="bottom">CSV</button>
-                                <button type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportAsXLSX()" class="p-button-success mr-2"  pTooltip="XLS" tooltipPosition="bottom">XL</button>
+                                <button *appUserRole="['superAdmin', 'admin' ]" type="button" pButton pRipple icon="pi pi-file" (click)="dt1.exportCSV()" class="mr-2" pTooltip="CSV" tooltipPosition="bottom">CSV</button>
+                                <button *appUserRole="['superAdmin', 'admin' ]" type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportAsXLSX()" class="p-button-success mr-2"  pTooltip="XLS" tooltipPosition="bottom">XL</button>
                                 <!-- <button type="button" pButton pRipple icon="pi pi-file-pdf" (click)="exportPdf()" class="p-button-warning mr-2" pTooltip="PDF" tooltipPosition="bottom"></button> -->
-                                <button type="button" pButton pRipple icon="pi pi-filter" (click)="dt1.exportCSV({selectionOnly:true})" class="p-button-info ml-auto" pTooltip="Selection Only" tooltipPosition="bottom">CSV</button>
+                                <button *appUserRole="['superAdmin', 'admin' ]" type="button" pButton pRipple icon="pi pi-filter" (click)="dt1.exportCSV({selectionOnly:true})" class="p-button-info ml-auto" pTooltip="Selection Only" tooltipPosition="bottom">CSV</button>
                               </div>
                             </ng-template>
                             <ng-template pTemplate="header">
