--- a/src/app/components/sales/cancelled-orders/cancelled-orders.component.html
+++ b/src/app/components/sales/cancelled-orders/cancelled-orders.component.html
@@ -7,7 +7,7 @@
                     <div class="custom-datatable">
                         <input type='text' class="filter-ngx form-control" placeholder='Search...'
                             (keyup)='updateFilter($event)' />
-                            <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
+                            <button *appUserRole="['superAdmin', 'admin','sales' ]" class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
                         
                         
                         <table class="table table-striped table-bordered" >
