--- a/src/app/components/sales/renewal-order/renewal-order.component.html
+++ b/src/app/components/sales/renewal-order/renewal-order.component.html
@@ -9,7 +9,7 @@
                             (keyup)='updateFilter($event)' />
                             <button class="pull-left btn btn-warning" [routerLink]="'../create-renewal-order'">Create order <i class="fa fa-plus"></i></button>
                             <!-- <button class="pull-left btn btn-warning ml-2" (click)="RunRenewalOrderJob()"> <i class="fa fa-refresh"></i> Refresh</button> -->
-                            <button class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
+                            <button *appUserRole="['superAdmin', 'admin','sales' ]" class="pull-right btn btn-warning" (click)="exportAsXLSX()">Download</button><br><br>
                         
                         
 
@@ -23,10 +23,10 @@
                                       </span>
                               </div>
                               <div class="flex">
-                                <button type="button" pButton pRipple icon="pi pi-file" (click)="dt1.exportCSV()" class="mr-2" pTooltip="CSV" tooltipPosition="bottom">CSV</button>
-                                <button type="button" pButton pRipple icon="pi pi-file-excel" (click)="exportAsXLSX()" class="p-button-success mr-2"  pTooltip="XLS" tooltipPosition="bottom">XL</button>
+                                <button type="button" *appUserRole="['superAdmin', 'admin','sales' ]" pButton pRipple icon="pi pi-file" (click)="dt1.exportCSV()" class="mr-2" pTooltip="CSV" tooltipPosition="bottom">CSV</button>
+                                <button type="button" *appUserRole="['superAdmin', 'admin','sales' ]" pButton pRipple icon="pi pi-file-excel" (click)="exportAsXLSX()" class="p-button-success mr-2"  pTooltip="XLS" tooltipPosition="bottom">XL</button>
                                 <!-- <button type="button" pButton pRipple icon="pi pi-file-pdf" (click)="exportPdf()" class="p-button-warning mr-2" pTooltip="PDF" tooltipPosition="bottom"></button> -->
-                                <button type="button" pButton pRipple icon="pi pi-filter" (click)="dt1.exportCSV({selectionOnly:true})" class="p-button-info ml-auto" pTooltip="Selection Only" tooltipPosition="bottom">CSV</button>
+                                <button type="button" *appUserRole="['superAdmin', 'admin','sales' ]" pButton pRipple icon="pi pi-filter" (click)="dt1.exportCSV({selectionOnly:true})" class="p-button-info ml-auto" pTooltip="Selection Only" tooltipPosition="bottom">CSV</button>
                               </div>
                             </ng-template>
                             <ng-template pTemplate="header">
